--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.5.4",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "^18.3.1",
